--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta jtt[-eqiov="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Public+Sans:300i,300,500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Team Profile Generator</title>
 </head>
 
 <body>
-  <h1>My Team</h1>
+  <h1 class="text-align-center title">My Team</h1>
+
+  <div class="card border-dark" style="width: 18rem;">
+    <div class="card-header text-white bg-primary mb-3">
+      <h2 class="card-title ">Name</h2>
+      <h4 class="card-title">Role: </h4>
+    </div>
+    <div class="card-body">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item border-light">ID:</li>
+        <li class="list-group-item border-light">
+          <a href="#" class="card-link">Email: </li>
+        <li class="list-group-item border-light">
+          <a href="#" class="card-link">Office Number Github or School </a></li>
+      </ul>
+
+    </div>
+  </div>
 
 </body>
 
